# high_performance_computing

./: .gitignore
block1-lru/: CMakeLists.txt  GNUmakefile  bench.sh  itree.h  notes
block1-lru/protocol/: protocol.tex
block1-lru/src/: CMakeLists.txt  gentrace.c  hash.c  hash.h  itree.c  itree.h  lru-misses.c  naive.c  naive.h  stackdist.c  stackdist.h
block1-lru/test/: CMakeLists.txt  hash.c  itree.c  stackdist.c
block3-bcast/: CMakeLists.txt  GNUmakefile
block3-bcast/protocol/: .gitignore  Makefile  functions.Rnw  protocol.Rnw  protocol.tex
block3-bcast/results/: bench.csv  rbench.csv
block3-bcast/src/: CMakeLists.txt  bench.c  binary.c  binary.h  binomial.c  binomial.h  linear.c  linear.h  native.c  native.h  util.c  util.h
block3-bcast/test/: CMakeLists.txt  bcast.c
